--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -24,9 +24,14 @@
 	    </li>
 	  	#SET{name,export}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
 	    [<li class="editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
-	    	<label onclick="jQuery('#export_liste').toggle('fast');" style="cursor:pointer;"><:install_tables_base:></label>
+	    	<label><:install_tables_base:></label>
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
-				<div id="export_liste" style="display:none;">
+				<div class="choix">
+					<input type="checkbox" name="tout_sauvegarder" id="tout_sauvegarder" value="oui"[(#ENV{tout_sauvegarder}|oui)checked="checked"]
+								 onchange="jQuery(this).attr('checked')?jQuery('#liste_tables').hide('fast'):jQuery('#liste_tables').show('fast');" />
+					<label for="tout_sauvegarder"><:dump:tout_sauvegarder:></label>
+				</div>
+				<div id="liste_tables"[(#ENV{tout_sauvegarder}|oui)style="display:none;"]>
 				(#ENV*{_tables})
 				</div>
 	    </li>]
