--- a/prive/squelettes/contenu/page-sauvegarder.html
+++ b/prive/squelettes/contenu/page-sauvegarder.html
@@ -9,6 +9,15 @@
 [(#GET{fin}|non)
 <h1><:texte_sauvegarde:></h1>
 
+#SET{dir_dump,#VAL{'<i>'}|concat{#ENV{_dir_dump},'</i>'}}
+#SET{dir_img,#VAL{'<i>'}|concat{#ENV{_dir_img},'</i>'}}
+
+#BOITE_OUVRIR{'','notice'}
+<p><:texte_admin_tech_01{dossier=#GET{dir_dump},img=#GET{dir_img}}:></p>
+<p><:texte_admin_tech_02{spipnet=#ENV{_spipnet}}:></p>
+#BOITE_FERMER
+
+
 <div class="ajax">
 	#FORMULAIRE_SAUVEGARDER
 </div>
