--- a/prive/squelettes/contenu/page-sauvegarder.html
+++ b/prive/squelettes/contenu/page-sauvegarder.html
@@ -11,10 +11,11 @@
 
 #SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
 #SET{dir_img,#VAL{'<i>'}|concat{#EVAL{_DIR_IMG}|joli_repertoire{},'</i>'}}
+#SET{spipnet,#EVAL{$GLOBALS}|table_valeur{home_server}|concat{'/',#LANG,'_article1489.html'}}
 
 #BOITE_OUVRIR{'','notice'}
 <p><:texte_admin_tech_01{dossier=#GET{dir_dump},img=#GET{dir_img}}:></p>
-<p><:texte_admin_tech_02{spipnet=#ENV{_spipnet}}:></p>
+<p><:texte_admin_tech_02{spipnet=#GET{spipnet}}:></p>
 #BOITE_FERMER
 
 
