afficher la taille de facon moins informatique (filtre taille_en_octets), et ne pas rappeler la date du jour

--- a/prive/squelettes/contenu/page-sauvegarder.html
+++ b/prive/squelettes/contenu/page-sauvegarder.html
@@ -37,9 +37,8 @@
 	[(#GET{taille}|oui)
 	#BOITE_OUVRIR{'','success'}
 
-	#SET{taille,#VAL{taille_octets}|_T{#ARRAY{taille,#GET{taille}}}}
+	[(#SET{archive,[(#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b> ('}|concat{[(#GET{taille}|taille_en_octets)]}|concat{')'})]})]
 
-	#SET{archive,#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b> (',#GET{taille},', ',#ENV{status}|dump_date_sauvegarde|affdate_jourcourt{},')'}}
 	<p>
 	<:info_sauvegarde_reussi_02{archive=#GET{archive}}:> <:info_sauvegarde_reussi_03:> <:info_sauvegarde_reussi_04:>
 	</p>
