interface de restauration : formulaire de choix de la sauvegarde a restaurer, avec possibilite de selectionner les tables de la sauvegarde a restaurer. Pour le moment sql_alltable en sqlite ramene un peu n'importe quoi. Une confirmation est demandee avant lancement de la restauration poprement dite (qui pour l'instant meurt sans rien faire)

--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -15,7 +15,7 @@
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
 				<input type='text' class='text' name='#GET{name}' id='#GET{name}' value="#ENV{#GET{name}}" />
 	    </li>
-	  	#SET{name,export}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
+	  	#SET{name,tables}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
 	    [<li class="editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
 	    	<label><:install_tables_base:></label>
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
