lors de la restauration, il faut compter le nombre de donnees dans les tables du dump, pas dans les tables de la base principal !

--- a/prive/squelettes/contenu/page-restaurer.html
+++ b/prive/squelettes/contenu/page-restaurer.html
@@ -21,7 +21,7 @@
 
 	#BOITE_OUVRIR{'','success'}
 
-	[(#SET{archive,[(#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b> ('}|concat{[(#GET{taille}|taille_en_octets)]}|concat{')'})]})]
+	[(#SET{archive,[(#VAL{'<br /><b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b>'})]})]
 
 	<p>
 	<:dump:info_restauration_finie{archive=#GET{archive}}:>
