--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -3,7 +3,7 @@
 	[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
 	[<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
 	[(#ENV{editable})
-	<form method='post' action='#ENV{action}' enctype='multipart/form-data'><div>
+	<form method='post' action='#ENV{action}'><div>
 		[(#REM) declarer les hidden qui declencheront le service du formulaire
 		parametre : url d'action ]
 		#ACTION_FORMULAIRE
@@ -25,7 +25,7 @@
 					<label for="tout_sauvegarder"><:dump:tout_sauvegarder:></label>
 				</div>
 				<div id="liste_tables"[(#ENV{tout_sauvegarder}|oui)style="display:none;"]>
-				(#ENV*{_tables})
+				(#INCLURE{fond=formulaires/inc-lister-sauvegardes,env,ajax,name='',id=restauration,titre=<:dump:sauvegardes_existantes:>})
 				</div>
 	    </li>]
 	  </ul>
