Reintégration des chaines de langue spip dans dump

--- a/formulaires/restaurer.html
+++ b/formulaires/restaurer.html
@@ -48,7 +48,7 @@
 	  </ul>
 	  [(#REM) ajouter les saisies supplementaires : extra et autre, a cet endroit ]
 	  <!--extra-->
-	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='submit' value='<:bouton_restaurer_base:>' /></p>
+	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='submit' value='<:dump:bouton_restaurer_base:>' /></p>
 	</div></form>
 	]
 </div>
