--- a/prive/squelettes/contenu/restaurer.html
+++ b/prive/squelettes/contenu/restaurer.html
@@ -7,11 +7,11 @@
 ]
 #SET{fin,#ENV{status}|dump_verifie_sauvegarde_finie}
 [(#GET{fin}|non)
-	<h1><:texte_restaurer_base:></h1>
+	<h1><:dump:texte_restaurer_base:></h1>
 
 	#BOITE_OUVRIR{'','notice'}
 	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
-	<p><:texte_restaurer_sauvegarde{dossier=#GET{dir_dump}}:></p>
+	<p><:dump:texte_restaurer_sauvegarde{dossier=#GET{dir_dump}}:></p>
 	#BOITE_FERMER
 
 	<div class="ajax">
@@ -25,7 +25,7 @@
 
 	<p>
 	<:dump:info_restauration_finie{archive=#GET{archive}}:>
-	<:info_sauvegarde_reussi_03:> <:info_sauvegarde_reussi_04:>
+	<:dump:info_sauvegarde_reussi_03:> <:dump:info_sauvegarde_reussi_04:>
 	</p>
 
 	#BOITE_FERMER
