--- a/prive/squelettes/contenu/sauvegarder.html
+++ b/prive/squelettes/contenu/sauvegarder.html
@@ -7,15 +7,15 @@
 ]
 #SET{fin,#ENV{status}|dump_verifie_sauvegarde_finie}
 [(#GET{fin}|non)
-	<h1><:texte_sauvegarde:></h1>
+	<h1><:dump:texte_sauvegarde:></h1>
 
 	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
 	#SET{dir_img,#VAL{'<i>'}|concat{#EVAL{_DIR_IMG}|joli_repertoire{},'</i>'}}
 	#SET{spipnet,#EVAL{$GLOBALS}|table_valeur{home_server}|concat{'/',#LANG,'_article1489.html'}}
 
 	#BOITE_OUVRIR{'','info'}
-	<p><:texte_admin_tech_01{dossier=#GET{dir_dump},img=#GET{dir_img}}:></p>
-	<p><:texte_admin_tech_02{spipnet=#GET{spipnet}}:></p>
+	<p><:dump:texte_admin_tech_01{dossier=#GET{dir_dump},img=#GET{dir_img}}:></p>
+	<p><:dump:texte_admin_tech_02{spipnet=#GET{spipnet}}:></p>
 	#BOITE_FERMER
 
 	<div class="ajax">
@@ -27,7 +27,7 @@
 	]
 ]
 [(#GET{fin}|oui)
-	<h1><:info_sauvegarde:></h1>
+	<h1><:dump:info_sauvegarde:></h1>
 
 	#SET{taille,#ENV{status}|dump_taille_sauvegarde}
 	[(#GET{taille}|non)
@@ -43,7 +43,7 @@
 	[(#SET{archive,[(#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b> ('}|concat{[(#GET{taille}|taille_en_octets)]}|concat{')'})]})]
 
 	<p>
-	<:info_sauvegarde_reussi_02{archive=#GET{archive}}:> <:info_sauvegarde_reussi_03:> <:info_sauvegarde_reussi_04:>
+	<:dump:info_sauvegarde_reussi_02{archive=#GET{archive}}:> <:dump:info_sauvegarde_reussi_03:> <:dump:info_sauvegarde_reussi_04:>
 	</p>
 
 	[<h4><:dump:details_sauvegarde:></h4>
