--- a/prive/squelettes/contenu/restaurer.html
+++ b/prive/squelettes/contenu/restaurer.html
@@ -1,13 +1,6 @@
-[(#REM)
-
-  Squelette
-  (c) 2009 xxx
-  Distribue sous licence GPL
-
-]
 #SET{fin,#ENV{status}|dump_verifie_sauvegarde_finie}
 [(#GET{fin}|non)
-	<h1><:dump:texte_restaurer_base:></h1>
+	<h1 class="grostitre"><:dump:texte_restaurer_base:></h1>
 
 	#BOITE_OUVRIR{'','notice'}
 	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
