--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -25,7 +25,7 @@
 					<label for="tout_sauvegarder"><:dump:tout_sauvegarder:></label>
 				</div>
 				<div id="liste_tables"[(#ENV{tout_sauvegarder}|oui)style="display:none;"]>
-				(#INCLURE{fond=formulaires/inc-lister-sauvegardes,env,ajax,name='',id=restauration,titre=<:dump:sauvegardes_existantes:>})
+				(#ENV*{_tables})
 				</div>
 	    </li>]
 	  </ul>
