restreindre sauvegarde et restauration aux seuls administrateurs (A. Pachot). ferme #2353

--- a/prive/squelettes/contenu/restaurer.html
+++ b/prive/squelettes/contenu/restaurer.html
@@ -1,3 +1,4 @@
+[(#AUTORISER{sauvegarder}|sinon_interdire_acces)]
 #SET{fin,#ENV{status}|dump_verifie_sauvegarde_finie}
 [(#GET{fin}|non)
 	<h1 class="grostitre"><:dump:texte_restaurer_base:></h1>
