--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -21,7 +21,7 @@
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
 				<div class="choix">
 					<input type="checkbox" name="tout_sauvegarder" id="tout_sauvegarder" value="oui"[(#ENV{tout_sauvegarder}|oui)checked="checked"]
-								 onchange="jQuery(this).attr('checked')?jQuery('#liste_tables').hide('fast'):jQuery('#liste_tables').show('fast');" />
+								 onchange="jQuery(this).prop('checked')?jQuery('#liste_tables').hide('fast'):jQuery('#liste_tables').show('fast');" />
 					<label for="tout_sauvegarder"><:dump:tout_sauvegarder:></label>
 				</div>
 				<div id="liste_tables"[(#ENV{tout_sauvegarder}|oui)style="display:none;"]>
