Afficher l'extension .sqlite du format de sauvegarde perturbe les utilisateurs qui ont une base mysql On la passe donc sous silence, ce n'est apres tout que de la technique qu'il n'est pas necessaire d'afficher. L'important est que ca sauvegarde et ca restaure, quel que soit le format de la base principale

--- a/formulaires/inc-lister-sauvegardes.html
+++ b/formulaires/inc-lister-sauvegardes.html
@@ -17,7 +17,7 @@
 								[(#ENV{#ENV{name}}|=={#VALEUR{fichier}}|oui)checked="checked"]
 								/></td>]
 					<td class="principale">
-						<label for="dump_#COMPTEUR_BOUCLE" style="word-wrap:break-word;">#VALEUR{fichier}</label>
+						<label for="dump_#COMPTEUR_BOUCLE" style="word-wrap:break-word;">[(#VALEUR{fichier}|basename{.sqlite})]</label>
 					</td>
 					<td style="text-align:right">
 						[(#VALEUR{taille}|taille_en_octets)]
