Les webmestres peuvent telecharger un dump directement depuis l'interface de sauvegarde, ce qui peut etre bien pratique

--- a/formulaires/inc-lister-sauvegardes.html
+++ b/formulaires/inc-lister-sauvegardes.html
@@ -8,6 +8,9 @@
 			<th scope='col'>[(#SELF|parametre_url{tri,nom}|ancre_url{##ENV{id,sauvegardes}}|lien_ou_expose{<:info_nom:>,#ENV{tri,nom}|=={nom},ajax})]</th>
 			<th scope='col'>[(#SELF|parametre_url{tri,taille}|ancre_url{##ENV{id,sauvegardes}}|lien_ou_expose{<:label_poids_fichier:>,#ENV{tri,nom}|=={taille},ajax})]</th>
 			<th scope='col'>[(#SELF|parametre_url{tri,date}|ancre_url{##ENV{id,sauvegardes}}|lien_ou_expose{<:public:date:>,#ENV{tri,nom}|=={date},ajax})]</th>
+			[(#ENV{download,''}|oui)
+			<th scope='col'></th>
+			]
 		</tr>
 		</thead>
 		<tbody>
@@ -25,6 +28,11 @@
 					<td>
 						[(#VAL{'Y-m-d H:i:s'}|date{#VALEUR{date}}|affdate_heure)]
 					</td>
+					[(#ENV{download,''}|oui)
+					<td>
+						<a href="#URL_ACTION_AUTEUR{telecharger_dump,#VALEUR{fichier}}" title="<:bouton_download|attribut_html:>">[(#CHEMIN_IMAGE{telecharger-16.png}|balise_img{<:bouton_download:>})]</a>
+					</td>
+					]
 				</tr>
 			</BOUCLE_dump>
 		</tbody>
