--- a/prive/squelettes/contenu/sauvegarder.html
+++ b/prive/squelettes/contenu/sauvegarder.html
@@ -17,7 +17,7 @@
 	</div>
 
 	[
-		(#INCLURE{fond=formulaires/inc-lister-sauvegardes,env,ajax,name='',id=sauvegarde,titre=<:dump:sauvegardes_existantes:>})
+		(#INCLURE{fond=formulaires/inc-lister-sauvegardes,env,ajax,name='',id=sauvegarde,titre=<:dump:sauvegardes_existantes:>,download=#AUTORISER{webmestre}})
 	]
 ]
 [(#GET{fin}|oui)
