--- a/formulaires/inc-lister-sauvegardes.html
+++ b/formulaires/inc-lister-sauvegardes.html
@@ -20,7 +20,7 @@
 								[(#ENV{#ENV{name}}|=={#VALEUR{fichier}}|oui)checked="checked"]
 								/></td>]
 					<td class="principale">
-						<label for="dump_#COMPTEUR_BOUCLE" style="word-wrap:break-word;">[(#VALEUR{fichier}|basename{.sqlite})]</label>
+						<label for="dump_#COMPTEUR_BOUCLE" style="word-wrap:break-word;" title="[(#VALEUR{fichier}|basename{.sqlite})]">[(#VALEUR{fichier}|basename{.sqlite}|couper{20})]</label>
 					</td>
 					<td style="text-align:right">
 						[(#VALEUR{taille}|taille_en_octets)]
