Report de [64195] et [64196]

--- a/formulaires/inc-lister-sauvegardes.html
+++ b/formulaires/inc-lister-sauvegardes.html
@@ -1,4 +1,6 @@
-<B_dump>
+[(#REM)
+	Tableau affichant la liste des fichiers de saugardes avec quelques infos annexes
+]<B_dump>
 <div class='liste-objets dump' id='#ENV{id,sauvegardes}'>
 	<table class='spip liste'>
 		<thead>
