--- a/formulaires/restaurer.html
+++ b/formulaires/restaurer.html
@@ -1,3 +1,6 @@
+[(#REM)
+	Formulaire de restauration #FORMULAIRE_RESTAURER
+]
 <div class="formulaire_spip formulaire_#FORM formulaire_#FORM-#ENV{id,nouveau}">
 
 	[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
