--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -1,3 +1,6 @@
+[(#REM)
+	Formulaire de sauvegarde #FORMULAIRE_SAUVEGARDER
+]
 <div class="formulaire_spip formulaire_#FORM formulaire_#FORM-#ENV{id,nouveau}">
 
 	[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
