tite boulette dans r57821

--- a/prive/style_prive_plugin_dump.html
+++ b/prive/style_prive_plugin_dump.html
@@ -21,6 +21,6 @@
 #SET{right,#ENV{ltr}|choixsiegal{left,right,left}}
 
 .liste-objets.dump tr .fichier label {display:block; width: 260px;word-wrap:break-word;}
-.liste-objets.dump tr .taille {style="text-align:right"}
+.liste-objets.dump tr .taille {text-align:right;}
 
 [(#REM)	</style>]
