--- a/formulaires/restaurer.html
+++ b/formulaires/restaurer.html
@@ -11,7 +11,7 @@
 		[(#REM) declarer les hidden qui declencheront le service du formulaire
 		parametre : url d'action ]
 		#ACTION_FORMULAIRE
-	  <ul>
+	  <ul class="editer-groupe">
 	  	#SET{name,choisi}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
 	    [<li class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
 	    	<label for="#GET{name}"><:dump:label_nom_fichier_sauvegarde:></label>
