--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -11,7 +11,7 @@
 		parametre : url d'action ]
 		#ACTION_FORMULAIRE
 		<input type='hidden' name='reinstall' value='non' />
-	  <ul>
+	  <ul class="editer-groupe">
 	  	#SET{name,nom_sauvegarde}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
 	    <li class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
 	    	<label for="#GET{name}"><:dump:label_nom_fichier_sauvegarde:></label>
