--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -11,15 +11,15 @@
 		parametre : url d'action ]
 		#ACTION_FORMULAIRE
 		<input type='hidden' name='reinstall' value='non' />
-	  <ul class="editer-groupe">
+	  <div class="editer-groupe">
 	  	#SET{name,nom_sauvegarde}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
-	    <li class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
+	    <div class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
 	    	<label for="#GET{name}"><:dump:label_nom_fichier_sauvegarde:></label>
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
 				<input type='text' class='text' name='#GET{name}' id='#GET{name}' value="#ENV{#GET{name}}" />
-	    </li>
+	    </div>
 	  	#SET{name,tables}#SET{erreurs,#ENV**{erreurs}|table_valeur{#GET{name}}}#SET{obli,obligatoire}
-	    [<li class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
+	    [<div class="editer editer_[(#GET{name})][ (#GET{obli})][ (#GET{erreurs}|oui)erreur]">
 	    	<label><:install_tables_base:></label>
 				[<span class='erreur_message'>(#GET{erreurs})</span>]
 				<div class="choix">
@@ -32,8 +32,8 @@
 					(#ENV*{_tables})
 					</div>
 				</div>
-	    </li>]
-	  </ul>
+	    </div>]
+	  </div>
 	  [(#REM) ajouter les saisies supplementaires : extra et autre, a cet endroit ]
 	  <!--extra-->
 	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='submit' value='<:dump:texte_sauvegarde_base:>' /></p>
