--- a/prive/squelettes/contenu/sauvegarder.html
+++ b/prive/squelettes/contenu/sauvegarder.html
@@ -3,8 +3,8 @@
 [(#GET{fin}|non)
 	<h1 class="grostitre"><:dump:texte_sauvegarde:></h1>
 
-	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
-	#SET{dir_img,#VAL{'<i>'}|concat{#EVAL{_DIR_IMG}|joli_repertoire{},'</i>'}}
+	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire,'</i>'}}
+	#SET{dir_img,#VAL{'<i>'}|concat{#CONST{_DIR_IMG}|joli_repertoire,'</i>'}}
 	#SET{spipnet,#EVAL{$GLOBALS}|table_valeur{home_server}|concat{'/',#LANG,'_article1489.html'}}
 
 	#BOITE_OUVRIR{'','info'}
