https://core.spip.net/issues/3986 : transition de .submit vers .btn (on ajoute la class btn partout ou il y avait submit et on cible .btn dans la css aussi

--- a/formulaires/restaurer.html
+++ b/formulaires/restaurer.html
@@ -53,7 +53,7 @@
 	  </div>
 	  [(#REM) ajouter les saisies supplementaires : extra et autre, a cet endroit ]
 	  <!--extra-->
-	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='submit' value='<:dump:bouton_restaurer_base:>' /></p>
+	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='btn submit' value='<:dump:bouton_restaurer_base:>' /></p>
 	</div></form>
 	]
 </div>
