--- a/formulaires/sauvegarder.html
+++ b/formulaires/sauvegarder.html
@@ -36,7 +36,7 @@
 	  </div>
 	  [(#REM) ajouter les saisies supplementaires : extra et autre, a cet endroit ]
 	  <!--extra-->
-	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='submit' value='<:dump:texte_sauvegarde_base:>' /></p>
+	  <p class='boutons'><span class='image_loading'>&nbsp;</span><input type='submit' class='btn submit' value='<:dump:texte_sauvegarde_base:>' /></p>
 	</div></form>
 	]
 </div>
