Suite à https://core.spip.net/issues/4560 ajout des role sur les message ok/erreur des formulaires

--- a/formulaires/restaurer.html
+++ b/formulaires/restaurer.html
@@ -3,11 +3,11 @@
 ]
 <div class="formulaire_spip formulaire_#FORM formulaire_#FORM-#ENV{id,nouveau}">
 
-	[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
-	[<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
+	[<p class="reponse_formulaire reponse_formulaire_ok" role="status">(#ENV*{message_ok})</p>]
+	[<p class="reponse_formulaire reponse_formulaire_erreur" role="alert">(#ENV*{message_erreur})</p>]
 	[(#ENV{editable})
 	<form method='post' action='#ENV{action}'><div>
-		[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{erreurs/message_confirm})</p>]
+		[<p class="reponse_formulaire reponse_formulaire_ok" role="status">(#ENV*{erreurs/message_confirm})</p>]
 		[(#REM) declarer les hidden qui declencheront le service du formulaire
 		parametre : url d'action ]
 		#ACTION_FORMULAIRE
