--- a/prive/squelettes/contenu/restaurer.html
+++ b/prive/squelettes/contenu/restaurer.html
@@ -3,10 +3,10 @@
 [(#GET{fin}|non)
 	<h1 class="grostitre"><:dump:texte_restaurer_base:></h1>
 
-	#BOITE_OUVRIR{'','notice'}
+	#ALERTE_OUVRIR{'','notice'}
 	#SET{dir_dump,#VAL{'<i>'}|concat{#REM|dump_repertoire|joli_repertoire{},'</i>'}}
 	<p><:dump:texte_restaurer_sauvegarde{dossier=#GET{dir_dump}}:></p>
-	#BOITE_FERMER
+	#ALERTE_FERMER
 
 	<div class="ajax">
 		#FORMULAIRE_RESTAURER
