--- a/prive/squelettes/contenu/sauvegarder.html
+++ b/prive/squelettes/contenu/sauvegarder.html
@@ -7,10 +7,10 @@
 	#SET{dir_img,#VAL{'<i>'}|concat{#CONST{_DIR_IMG}|joli_repertoire{},'</i>'}}
 	#SET{spipnet,#EVAL{$GLOBALS}|table_valeur{home_server}|concat{'/',#LANG,'_article1489.html'}}
 
-	#BOITE_OUVRIR{'','info'}
+	#ALERTE_OUVRIR{'','info'}
 	<p><:dump:texte_admin_tech_01{dossier=#GET{dir_dump},img=#GET{dir_img}}:></p>
 	<p><:dump:texte_admin_tech_02{spipnet=#GET{spipnet}}:></p>
-	#BOITE_FERMER
+	#ALERTE_FERMER
 
 	<div class="ajax">
 		#FORMULAIRE_SAUVEGARDER
@@ -29,20 +29,20 @@
 	#SET{archive,#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b>'}}
 	#SET{erreurs,' '}
 
-	#BOITE_OUVRIR{'','error'}
+	#ALERTE_OUVRIR{'','error'}
 	<:dump:erreur_taille_sauvegarde{fichier=#GET{archive}}:>
-	#BOITE_FERMER
+	#ALERTE_FERMER
 	]
 
 	[
-	#BOITE_OUVRIR{'','error'}
+	#ALERTE_OUVRIR{'','error'}
 	#SET{erreurs,' '}
 	(#ENV{status}|dump_afficher_erreurs)
-	#BOITE_FERMER
+	#ALERTE_FERMER
 	]
 
 	[(#GET{erreurs}|non)
-	#BOITE_OUVRIR{'','success'}
+	#ALERTE_OUVRIR{'','success'}
 
 	[(#SET{archive,[(#VAL{'<b>'}|concat{#ENV{status}|dump_nom_sauvegarde|joli_repertoire}|concat{'</b> ('}|concat{[(#GET{taille}|taille_en_octets)]}|concat{')'})]})]
 
@@ -54,5 +54,5 @@
 	(#ENV{status}|dump_afficher_tables_sauvegardees)]
 	]
 	
-	#BOITE_FERMER
+	#ALERTE_FERMER
 ]
